tests/NormalTests/paczka1/small_fuzzy/92348114.err
Error in line 1: UDF A612 75,0
Error in line 3: UaoHIEmw A362 83,3
Error in line 12: UaoHIEmw S430 43,6
